force-app/main/default/objects/Class_Term__c/Class_Term__c.object-meta.xml
<CustomObject>
    <label>Class Term</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>