force-app/main/default/objects/Class_Term__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>TODAY() &gt;= Start_Date__c  &amp;&amp; TODAY() &lt;=  End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>