force-app/main/default/objects/Class_Term__c/fields/Allow_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Enrollment__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;Scheduled&apos;) || ISPICKVAL(Status__c, &apos;In Progress&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Enrollment</label>
    <type>Checkbox</type>
</CustomField>