force-app/main/default/objects/Class_Term__c/fields/Exclude_Public_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Public_Holidays__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude Public Holidays</label>
    <type>Checkbox</type>
</CustomField>