force-app/main/default/objects/Class_Term__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>CLST-{000000}</displayFormat>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>