force-app/main/default/objects/Class_Term__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IMAGE(
IF(ISPICKVAL(Status__c,&apos;Draft&apos;) , &apos;/resource/educato__Draft&apos;, 
IF(ISPICKVAL(Status__c,&apos;Scheduled&apos;),&apos;/resource/educato__Schedule&apos;,
IF(ISPICKVAL(Status__c,&apos;Completed&apos;),&apos;/resource/educato__Completed&apos;,&apos;/resource/educato__Gray&apos;
))), TEXT(Status__c),20,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>