force-app/main/default/objects/Class_Term__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Class Terms</relationshipLabel>
    <relationshipName>Class_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>