force-app/main/default/objects/Class_Term__c/validationRules/Common_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Validation</fullName>
    <active>true</active>
    <description>Validation on sessions and sequence</description>
    <errorConditionFormula>Sequence__c &lt;= 0  ||  Sessions__c &lt;=0</errorConditionFormula>
    <errorMessage>Please input valid information in Sequence and Sessions to proceed.</errorMessage>
</ValidationRule>