force-app/main/default/objects/Class_Term__c/listViews/All_Unscheduled_Terms.listView-meta.xml
<ListView>
    <fullName>All_Unscheduled_Terms</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Sessions__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All Unscheduled Terms</label>
</ListView>